[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uni_gen"
version = "0.1.0"
description = "A unique code generator module"
authors = [{name = "Your Name"}]

[tool.setuptools]
# This tells Python to ONLY install uni_gen.py and ignore run.py
py-modules = ["uni_gen"]